# python-civic-mcp-client

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
examples/: README.md  direct_token.py  fastmcp_backend.py  langchain_adapter.py  pydanticai_adapter.py  token_exchange.py
src/civic_mcp_client/: __init__.py  auth.py  backends.py  client.py  token_exchange.py  types.py
src/civic_mcp_client/adapters/: __init__.py  fastmcp.py  langchain.py  pydanticai.py
tests/: test_client_headers.py  test_http_backend_sse.py  test_token_exchange.py
tests/adapters/: test_fastmcp_adapter.py  test_langchain_adapter.py  test_pydanticai_adapter.py
tests/integration/: test_live_hub.py
